Rebase 2.0 with master branch and resolved conflicts (#1537)